# redteaming_code_auditors

./: .gitignore  .gitmodules  README.md  pyproject.toml
OpenVul/: run.py
RepoAudit/: LICENSE  README.md  pyproject.toml  requirements.txt
VulnLLM-R/: .gitignore  README.md  run_context_aware.sh  run_npd_c_attacks.sh  run_npd_python_attacks.sh  run_uaf_c_attacks.sh
adaptive_attacker/: README.md  VulTrial_transfer.md  baseline_generic_annotation.py  build_hf_index.py  config_bootstrapper.yaml  config_bootstrapper_fabricate_cot.yaml  config_refiner.yaml  config_refiner_fabricate_cot.yaml  config_refiner_fromscratch.yaml  detector_gpt55.py  detector_http.py  detector_llmdfa.py  detector_openvul.py  detector_repoaudit.py  detector_server.py  detector_vulnllmr.py  detector_vulrag.py  detector_vultrial.py  eval_vultrial.py  pointer_name.jsonl  refine_loop_fabricate_cot.py  refine_loop_fromscratch.py  refiner_agent.py  summarize_results.py  viewer_adaptive.py
adaptive_attacker_uaf/: config_bootstrapper_uaf.yaml  config_refiner_uaf.yaml  refine_loop_uaf.py
attacker/: INITIAL_RESULTS.md  README.md  annotation_utils.py  build_config.py  build_eval_datasets.py  build_eval_datasets_cpp.py  build_eval_datasets_sofa.py  build_manifest.py  config.yaml  config_cve.yaml  config_cve_nocheck.yaml  config_qwen.yaml  config_sofa.yaml  filter_cpp_problems.py  filter_leetcode_problems.py  make_instance_config.py  prepare_baseline.py  prepare_eval.py  reference_swebench.yaml  run_attacker.py  run_attacker.sh  run_crash.py  run_scaffold_attacks.py  run_test.py  setup_problems.py  static_check.py  submit.py  verify_npd.py  viewer.py
automatic/: README.md  gen_attacks.py  generate_variant.py
cvebench/: DATASET_README.md  README.md  build_benchmark.py  build_benchmark_uaf.py  check_repo_testsuite.py  classify_uaf_pattern.py  clone_repos.py  config_cve_attacker.yaml  config_cve_attacker_uaf.yaml  extract_context_cve.py  extract_headers.py  f3_uaf_ids.slim.jsonl  filter_pipeline.py  generate_attacker.py  generate_task_only.py  judge_cve_new.py  judge_cve_new_uaf.py  judge_r1r2.jsonl  judge_uaf.jsonl  patch_and_test.py  pilot_uaf_15.txt  pipeline_counts.py  push_to_hub.py  splice_target.py  uaf_confirmed_testable.txt  uaf_judge_confirmed.txt
defenses/: README.md  annotator_agent.py  apply_repoaudit.py  apply_vulnllm.py  d3_proxy_check.py  launch_screening_agent.sh  rebuild_variants.py  recovery_eval.py  registry.py  screen_benchmark.py  screening_agent.py
demo/: README.md  attack_agent.py  build_attacks.py  compare_results.py  highlight_cache.json  highlight_cache_defense.json  preprocess_defense.py  run_demo.sh  view_defense_results.py  viewer.py
docs/: ARCHITECTURE.md  ISSUE_SUMMARIZE.md  attacker_leetcode_results.md
repo_cve_dataset_mining/: .gitignore  README.md  Task2.md  build_harness_cve.py  build_with_repo_headers.py  check_retrieval.py  count_npd_sources.py  eval_local_model_cve.py  extract_treesitter.py  f12.jsonl  f3.jsonl  (+16 more)
(+3387 files in other folders)
