[project]
name = "redteaming-code-auditors"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # LLM inference
    "vllm==0.8.2",

    # RepoAudit + attack generation
    "anthropic",
    "dspy-ai>=2.0",
    "openai",
    "networkx",
    "tiktoken",
    "tqdm",

    # Shared parsing (pinned — both systems require 0.21.x)
    "tree-sitter==0.21.3",
    "tree-sitter-languages==1.10.2",

    # VulnLLM-R runtime (training deps excluded)
    "python-dotenv",
    "PyYAML",
    "loguru",
    "orjson",
    "aiolimiter",
    "pandas",
    "mini-swe-agent",
    "datasets",
    "vulscan",
    "model-zoo",
    "gradio",
    "transformers==5.3.0",
]

[tool.uv.sources]
vulscan = { path = "VulnLLM-R", editable = true }
model-zoo = { path = "VulnLLM-R/vulscan/model_zoo", editable = true }
mini-swe-agent = { path = "attacker/mini-swe-agent", editable = true }

[tool.uv]
package = false
