[project]
name = "redteaming-code-auditors"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # LLM inference
    "vllm==0.8.2",

    # RepoAudit + attack generation
    "anthropic",
    "dspy-ai>=2.0",
    "openai",
    "networkx",
    "tiktoken",
    "tqdm",

    # Shared parsing (pinned — both systems require 0.21.x)
    "tree-sitter==0.21.3",
    "tree-sitter-languages==1.10.2",

    # VulnLLM-R runtime (training deps excluded)
    "python-dotenv",
    "PyYAML",
    "loguru",
    "orjson",
    "aiolimiter",
    "pandas",
    "mini-swe-agent",
    "datasets",
    "vulscan",
    "model-zoo",
    "gradio",
    "transformers==5.3.0",

    # VulTrial (agentverse + its non-conflicting runtime deps)
    "agentverse",
    "colorama",
    "colorlog",
    "rapidfuzz",
    "astunparse",
    "typing-inspect",
    "scikit-learn",
]

[tool.uv.sources]
vulscan = { path = "VulnLLM-R", editable = true }
model-zoo = { path = "VulnLLM-R/vulscan/model_zoo", editable = true }
agentverse = { path = "VulTrial", editable = true }

[tool.uv]
package = false
# agentverse pins fastapi==0.95.1 for its web UI; vllm needs >=0.115.0.
# We only use agentverse's simulation agents (no web server), so this override is safe.
override-dependencies = ["fastapi>=0.115.0"]
